syntax = "proto3";

package shared;

message ChannelState {
  uint64 short_channel_id = 1;
  string local_node_id = 2;
  string remote_node_id = 3;
  bool active = 4;
  bool private = 5;
  uint64 capacity = 6;
  uint64 local_balance = 7;
  uint64 remote_balance = 8;
  uint64 unsettled_balance = 9;
  ChannelSettings local_channel_settings = 10;
  ChannelSettings remote_channel_settings = 11;
}
message ChannelSettings {
  uint64 chan_reserve_sat = 1;
  uint64 htlc_minimum_msat = 2;
}
